force-app/main/default/objects/Partner_Page_Configuration__c/Partner_Page_Configuration__c.object-meta.xml
<CustomObject>
    <label>Partner Page Configuration</label>
    <nameField>
        <label>Community Page Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Page Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>