force-app/main/default/objects/Partner_Page_Configuration__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Community_Page_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>