force-app/main/default/objects/Partner_Page_Configuration__c/fields/Account_Owner_Theater__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Theater__c</fullName>
    <label>(DEPRECATED) Account Owner Theater</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>Datos - Americas</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>Service Provider</fullName>
            </value>
            <value>
                <fullName>US &amp; Canada</fullName>
            </value>
            <value>
                <fullName>WW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>