force-app/main/default/objects/Partner_Page_Configuration__c/fields/Card_Title__c.field-meta.xml
<CustomField>
    <fullName>Card_Title__c</fullName>
    <description>Title displayed on the card</description>
    <label>Card Title</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>