force-app/main/default/objects/Partner_Page_Configuration__c/fields/Channel_Program__c.field-meta.xml
<CustomField>
    <fullName>Channel_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Program</label>
    <referenceTo>ChannelProgram</referenceTo>
    <relationshipName>Community_Page_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>