force-app/main/default/objects/Partner_Page_Configuration__c/fields/Channel_Program_Level__c.field-meta.xml
<CustomField>
    <fullName>Channel_Program_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Program Level</label>
    <referenceTo>ChannelProgramLevel</referenceTo>
    <relationshipName>Community_Page_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>