force-app/main/default/objects/Partner_Page_Configuration__c/fields/Has_Sub_Menu__c.field-meta.xml
<CustomField>
    <fullName>Has_Sub_Menu__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the Menu has submenu</description>
    <label>Has Sub Menu</label>
    <type>Checkbox</type>
</CustomField>