force-app/main/default/objects/Partner_Page_Configuration__c/fields/Image_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Image_Alignment__c</fullName>
    <label>Image Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Right</fullName>
            </value>
            <value>
                <fullName>Left</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>