force-app/main/default/objects/Partner_Page_Configuration__c/fields/Image_Type__c.field-meta.xml
<CustomField>
    <fullName>Image_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banner</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Carousel</fullName>
            </value>
            <value>
                <fullName>HelpLink</fullName>
            </value>
            <value>
                <fullName>Menu</fullName>
            </value>
            <value>
                <fullName>Menu Item</fullName>
            </value>
            <value>
                <fullName>Pop Up Card</fullName>
            </value>
            <value>
                <fullName>Accordion</fullName>
            </value>
            <value>
                <fullName>Welcome Wizard Video</fullName>
            </value>
            <value>
                <fullName>Welcome Wizard Promo</fullName>
            </value>
            <value>
                <fullName>Welcome Wizard Resources</fullName>
            </value>
            <value>
                <fullName>Certifications</fullName>
            </value>
            <value>
                <fullName>Welcome Page</fullName>
            </value>
            <value>
                <fullName>Global Resource Card</fullName>
            </value>
            <value>
                <fullName>Featured Item Card</fullName>
            </value>
            <value>
                <fullName>Page Description</fullName>
            </value>
            <value>
                <fullName>Two Column Card</fullName>
            </value>
            <value>
                <fullName>Related Resource</fullName>
            </value>
            <value>
                <fullName>Image Card</fullName>
            </value>
            <value>
                <fullName>Footer</fullName>
            </value>
            <value>
                <fullName>Performance Dashboard Widget</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>