force-app/main/default/objects/Partner_Page_Configuration__c/fields/Link_Type__c.field-meta.xml
<CustomField>
    <fullName>Link_Type__c</fullName>
    <label>Link Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Community Page</fullName>
                <default>true</default>
                <label>Community Page</label>
            </value>
            <value>
                <fullName>External URL</fullName>
            </value>
            <value>
                <fullName>File</fullName>
            </value>
            <value>
                <fullName>Global Action</fullName>
            </value>
            <value>
                <fullName>Salesforce Object</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>