force-app/main/default/objects/Partner_Page_Configuration__c/fields/Menu_Group__c.field-meta.xml
<CustomField>
    <fullName>Menu_Group__c</fullName>
    <label>Menu Group</label>
    <length>80</length>
    <type>Text</type>
</CustomField>