force-app/main/default/objects/Partner_Page_Configuration__c/fields/Menu_Label__c.field-meta.xml
<CustomField>
    <fullName>Menu_Label__c</fullName>
    <label>Menu Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>