force-app/main/default/objects/Partner_Page_Configuration__c/fields/Mobile_Image_Url__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Image_Url__c</fullName>
    <label>Mobile Image Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>