force-app/main/default/objects/Partner_Page_Configuration__c/fields/Navigate_Text__c.field-meta.xml
<CustomField>
    <fullName>Navigate_Text__c</fullName>
    <description>Text which is shown in place of url.</description>
    <label>Navigate Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>