force-app/main/default/objects/Partner_Page_Configuration__c/fields/Navigate_Url__c.field-meta.xml
<CustomField>
    <fullName>Navigate_Url__c</fullName>
    <label>Navigate Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>