force-app/main/default/objects/Partner_Page_Configuration__c/fields/Static_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Static_Resource_Name__c</fullName>
    <label>Static Resource Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>