force-app/main/default/objects/Partner_Page_Configuration__c/fields/Theatre__c.field-meta.xml
<CustomField>
    <fullName>Theatre__c</fullName>
    <description>[ETM-123]:  Theatre picklist values</description>
    <label>Theatre</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ETM_Theatre</valueSetName>
    </valueSet>
</CustomField>