force-app/main/default/objects/Partner_Page_Configuration__c/listViews/Accordion.listView-meta.xml
<ListView>
    <fullName>Accordion</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Card_Title__c</columns>
    <columns>Description__c</columns>
    <columns>Headline__c</columns>
    <columns>Link_Type__c</columns>
    <columns>Order__c</columns>
    <columns>Page_Name__c</columns>
    <columns>Image_Type__c</columns>
    <columns>Image_Text__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Image_Type__c</field>
        <operation>equals</operation>
        <value>Accordion</value>
    </filters>
    <label>Accordion</label>
</ListView>