force-app/main/default/objects/Partner_Page_Configuration__c/listViews/Accordions.listView-meta.xml
<ListView>
    <fullName>Accordions</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Image_Type__c</field>
        <operation>equals</operation>
        <value>Accordion</value>
    </filters>
    <label>Accordions</label>
</ListView>