force-app/main/default/objects/Partner_Page_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Menu_Label__c</columns>
    <columns>Menu_Group__c</columns>
    <columns>Page_Name__c</columns>
    <columns>Image_Type__c</columns>
    <columns>Link_Type__c</columns>
    <columns>Navigate_Url__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>