force-app/main/default/objects/Partner_Page_Configuration__c/listViews/Banners.listView-meta.xml
<ListView>
    <fullName>Banners</fullName>
    <columns>NAME</columns>
    <columns>Page_Name__c</columns>
    <columns>Order__c</columns>
    <columns>Active__c</columns>
    <columns>Image_Type__c</columns>
    <columns>Partner_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Image_Type__c</field>
        <operation>equals</operation>
        <value>Banner</value>
    </filters>
    <label>Banners</label>
</ListView>