force-app/main/default/objects/Partner_Page_Configuration__c/listViews/Cards.listView-meta.xml
<ListView>
    <fullName>Cards</fullName>
    <columns>NAME</columns>
    <columns>Page_Name__c</columns>
    <columns>Order__c</columns>
    <columns>Active__c</columns>
    <columns>Image_Type__c</columns>
    <columns>Partner_Type__c</columns>
    <columns>Primary_role__c</columns>
    <columns>Theatre__c</columns>
    <columns>Navigate_Url__c</columns>
    <columns>Audience_Name__c</columns>
    <columns>Navigate_Text__c</columns>
    <columns>Link_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Image_Type__c</field>
        <operation>equals</operation>
        <value>Card</value>
    </filters>
    <label>Cards</label>
</ListView>