force-app/main/default/objects/Partner_Page_Configuration__c/listViews/Category_Cards.listView-meta.xml
<ListView>
    <fullName>Category_Cards</fullName>
    <columns>NAME</columns>
    <columns>Page_Name__c</columns>
    <columns>Order__c</columns>
    <columns>Active__c</columns>
    <columns>Navigate_Text__c</columns>
    <columns>Description__c</columns>
    <columns>Navigate_Url__c</columns>
    <columns>Image_Url__c</columns>
    <columns>Link_Type__c</columns>
    <columns>Image_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Image_Type__c</field>
        <operation>equals</operation>
        <value>Card</value>
    </filters>
    <label>Category Cards</label>
</ListView>