force-app/main/default/objects/Partner_Page_Configuration__c/listViews/Certifications.listView-meta.xml
<ListView>
    <fullName>Certifications</fullName>
    <columns>NAME</columns>
    <columns>Image_Type__c</columns>
    <columns>Active__c</columns>
    <columns>Navigate_Text__c</columns>
    <columns>Navigate_Url__c</columns>
    <columns>Menu_Group__c</columns>
    <columns>Menu_Label__c</columns>
    <columns>Order__c</columns>
    <columns>Primary_role__c</columns>
    <columns>Tag__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Image_Type__c</field>
        <operation>equals</operation>
        <value>Certifications</value>
    </filters>
    <label>Certifications</label>
</ListView>