force-app/main/default/objects/Partner_Page_Configuration__c/listViews/Featured_Item_Card.listView-meta.xml
<ListView>
    <fullName>Featured_Item_Card</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Card_Title__c</columns>
    <columns>Description__c</columns>
    <columns>Image_Url__c</columns>
    <columns>Link_Type__c</columns>
    <columns>Navigate_Text__c</columns>
    <columns>Navigate_Url__c</columns>
    <columns>Order__c</columns>
    <columns>Page_Name__c</columns>
    <columns>Static_Resource_Name__c</columns>
    <columns>Image_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Image_Type__c</field>
        <operation>equals</operation>
        <value>Featured Item Card</value>
    </filters>
    <label>Featured Item Card</label>
</ListView>