force-app/main/default/objects/Partner_Page_Configuration__c/listViews/Footer.listView-meta.xml
<ListView>
    <fullName>Footer</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Image_Type__c</field>
        <operation>equals</operation>
        <value>Footer</value>
    </filters>
    <label>Footer</label>
</ListView>