force-app/main/default/objects/Partner_Page_Configuration__c/listViews/Footer_Components.listView-meta.xml
<ListView>
    <fullName>Footer_Components</fullName>
    <columns>NAME</columns>
    <columns>Image_Url__c</columns>
    <columns>Navigate_Text__c</columns>
    <columns>Navigate_Url__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Image_Type__c</field>
        <operation>equals</operation>
        <value>Footer</value>
    </filters>
    <label>Footer Components</label>
</ListView>