force-app/main/default/objects/Partner_Page_Configuration__c/listViews/Global_Resource_Section.listView-meta.xml
<ListView>
    <fullName>Global_Resource_Section</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Headline__c</columns>
    <columns>Link_Type__c</columns>
    <columns>Navigate_Text__c</columns>
    <columns>Navigate_Url__c</columns>
    <columns>Page_Name__c</columns>
    <columns>Image_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Image_Type__c</field>
        <operation>equals</operation>
        <value>Global Resource Card</value>
    </filters>
    <label>Global Resource Section</label>
</ListView>