force-app/main/default/objects/Partner_Page_Configuration__c/listViews/Help_Links.listView-meta.xml
<ListView>
    <fullName>Help_Links</fullName>
    <columns>NAME</columns>
    <columns>Page_Name__c</columns>
    <columns>Order__c</columns>
    <columns>Active__c</columns>
    <columns>Image_Type__c</columns>
    <columns>Partner_Type__c</columns>
    <columns>Navigate_Url__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Image_Type__c</field>
        <operation>equals</operation>
        <value>HelpLink</value>
    </filters>
    <label>Help Links</label>
</ListView>