force-app/main/default/objects/Partner_Page_Configuration__c/listViews/Image_Card.listView-meta.xml
<ListView>
    <fullName>Image_Card</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Page_Name__c</columns>
    <columns>Image_Text__c</columns>
    <columns>Image_Url__c</columns>
    <columns>Link_Type__c</columns>
    <columns>Headline__c</columns>
    <columns>Image_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Image_Type__c</field>
        <operation>equals</operation>
        <value>Image Card</value>
    </filters>
    <label>Image Card</label>
</ListView>